--- a/public/css/home.css
+++ b/public/css/home.css
@@ -84,3 +84,10 @@ textarea {
 .portfolio .portfolio-item:hover .portfolio-info {
   bottom: calc(var(--bs-gutter-x)* .5);
 }
+
+.php-email-form .loading,
+.php-email-form .sent-message,
+.php-email-form .error-message {
+  padding: 10px;
+  margin-bottom: 10px;
+}
